@@ -673,6 +673,12 @@ subtest 'errors after crossing multiple $refs using $id and $anchor' => sub {
       errors => [
         {
           instanceLocation => '',
+          keywordLocation => '/$ref/$ref/$ref/$ref/type',
+          absoluteKeywordLocation => 'http://localhost:4242/object.json#/type',
+          error => 'got integer, not object',
+        },
+        {
+          instanceLocation => '',
           keywordLocation => '/$ref/$ref/$ref/$ref/anyOf/0',
           absoluteKeywordLocation => 'http://localhost:4242/object.json#/anyOf/0',
           error => 'subschema is false',
@@ -682,12 +688,6 @@ subtest 'errors after crossing multiple $refs using $id and $anchor' => sub {
           keywordLocation => '/$ref/$ref/$ref/$ref/anyOf',
           absoluteKeywordLocation => 'http://localhost:4242/object.json#/anyOf',
           error => 'no subschemas are valid',
-        },
-        {
-          instanceLocation => '',
-          keywordLocation => '/$ref/$ref/$ref/$ref/type',
-          absoluteKeywordLocation => 'http://localhost:4242/object.json#/type',
-          error => 'got integer, not object',
         },
         {
           instanceLocation => '',
