@@ -55,6 +55,11 @@ cmp_deeply(
     errors => [
       {
         instanceLocation => '',
+        keywordLocation => '/required',
+        error => 'object is missing property: bar',
+      },
+      {
+        instanceLocation => '',
         keywordLocation => '/allOf/0/type',
         error => 'got object, not number',
       },
@@ -188,11 +193,6 @@ cmp_deeply(
         keywordLocation => '/propertyNames',
         error => 'not all property names are valid',
       },
-      {
-        instanceLocation => '',
-        keywordLocation => '/required',
-        error => 'object is missing property: bar',
-      },
     ],
   },
   'basic format includes all errors linearly',
@@ -213,6 +213,11 @@ cmp_deeply(
   {
     valid => false,
     errors => [
+      {
+        instanceLocation => '',
+        keywordLocation => '/required',
+        error => 'object is missing property: bar',
+      },
       {
         instanceLocation => '',
         keywordLocation => '/allOf/0/type',
@@ -302,11 +307,6 @@ cmp_deeply(
         error => 'pattern does not match',
       },
       # - "summary" error from /propertyNames is omitted
-      {
-        instanceLocation => '',
-        keywordLocation => '/required',
-        error => 'object is missing property: bar',
-      },
     ],
   },
   'terse format omits errors from redundant applicator keywords',
